<resources>
    <string name="app_name">AccelerometerFirebase</string>

    <string name="sign_in">Sign In</string>

    <string name="main_btn_start">Start</string>
    <string name="main_btn_stop">Stop</string>
    <string name="main_btn_show_as_list">List</string>
    <string name="main_btn_show_as_graph">Graph</string>
    <string name="main_btn_show_history">History</string>
    <string name="main_tv_show_as">Show as:</string>
    <string name="sign_out">Sign Out</string>
    <string name="menu_settings">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="pref_app">Application Preferences</string>
    <string name="pref_app_logging_interval">Logging interval</string>
    <string name="pref_app_logging_interval_sum">Log accelerometer data every x seconds</string>
    <string name="pref_app_enable_service_start_setting">Run service at specified time</string>
    <string name="pref_app_enable_service_start_setting_sum">Check if you want to know when it is time for lunch</string>
    <string name="pref_app_service_start_time">Service start time</string>
    <string name="pref_app_service_start_time_sum">Start service at specified time</string>
    <string name="pref_app_enable_session_length_setting">Enable session length setting</string>
    <string name="pref_app_enable_session_length_setting_sum">Check if you want to run session for specified time</string>
    <string name="pref_app_session_length">Session length</string>
    <string name="pref_app_session_length_sum">Run logging for specified time</string>
    <string name="pref_app_time_pref_set">Set</string>
    <string name="pref_app_time_pref_cancel">Cancel</string>

    <string name="config_pref_key_LoggingInterval">LoggingInterval</string>
    <string name="config_pref_key_enable_service_start_setting">enable_service_start_setting</string>
    <string name="config_pref_key_ServiceStartTime">ServiceStartTime</string>
    <string name="config_pref_key_enable_session_length_setting">enable_session_length_setting</string>
    <string name="config_pref_key_SessionLength">SessionLength</string>

    <string name="main_service_notification_title">Logging service</string>
    <string name="main_service_notification_message">Pick accelerometer data and save them to firebase.</string>
    <string name="launch_title">What to launch?</string>
    <string name="launch_accelerometer">Accelerometer</string>
    <string name="launch_filestore">FileStore</string>
    <string name="filestore_tools_upload_button">Upload file</string>
    <string name="filestore_tools_navigate_to_root_directory">Navigate to root directory</string>
    <string name="filestore_tools_create_new_directory">Create new directory</string>
    <string name="filestore_tools_download_button">Download file</string>
    <string name="filestore_tools_delete_button">Delete file</string>
    <string name="permission_rationale_title">Write external storage</string>
    <string name="permission_rationale_message">You need to grant this permission for application access to files on storage and ability to upload and download files from and to it.</string>
    <string name="filestore_toast_file_downloaded_to_your_download_directory">File downloaded to your ExternalStorage Download directory.</string>
    <string name="filestore_toast_file_downloading_failed">File downloading failed!</string>
    <string name="filestore_toast_no_external_storage_found">No ExternalStorage found. Unable to download file.</string>
    <string name="filestore_toast_file_has_been_deleted">has been deleted</string>
    <string name="filestore_toast_file_deleting_failed">File deleting failed!</string>
    <string name="filestore_permissions_error_title">Permissions Error!</string>
    <string name="filestore_permissions_error_description">FileStore need Write external storage permission for correct work. Application need to read file for uploading and write file when downloading it. If you like to use this functionality, please grant permissions for this app.</string>

    <string name="error_toast_no_internet">The Internet is disconnected. Please check the connection.</string>
    <string name="error_toast_google_play_services_error">Google Play Services error.</string>

</resources>
