<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vitaliyhtc.accelerometerfirebase.activities.MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImageView"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="8dp"
        android:src="@drawable/ic_account_circle_black_36dp"/>

    <TextView
        android:id="@+id/tv_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/userImageView"
        android:layout_toRightOf="@+id/userImageView"
        android:layout_toStartOf="@+id/btn_start_logging"
        android:layout_toLeftOf="@+id/btn_start_logging"
        />

    <Button
        android:id="@+id/btn_start_logging"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/btn_stop_logging"
        android:layout_toLeftOf="@+id/btn_stop_logging"
        android:text="@string/main_btn_start"
        android:textAllCaps="false"
        android:enabled="false"
        />

    <Button
        android:id="@+id/btn_stop_logging"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/main_btn_stop"
        android:textAllCaps="false"
        android:enabled="false"
        />

    <FrameLayout
        android:id="@+id/container_view"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_stop_logging"
        android:layout_above="@+id/btn_data_graph"
        />

    <TextView
        android:id="@+id/tv_show_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_alignParentBottom="true"
        android:text="@string/main_tv_show_as"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btn_data_history"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_show_as"
        android:layout_toRightOf="@id/tv_show_as"
        android:layout_alignParentBottom="true"
        android:text="@string/main_btn_show_history"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/btn_data_list"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btn_data_history"
        android:layout_toRightOf="@id/btn_data_history"
        android:layout_alignParentBottom="true"
        android:text="@string/main_btn_show_as_list"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/btn_data_graph"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btn_data_list"
        android:layout_toRightOf="@id/btn_data_list"
        android:layout_alignParentBottom="true"
        android:text="@string/main_btn_show_as_graph"
        android:textAllCaps="false"
        />

</RelativeLayout>
